Diseño de narvar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo"><img src="/images/logo.svg" alt=""></a>
-            <ul>
+            <a href="#" class="logo"><img src="/PaginaDeInicioSitioWeb/images/logo.svg" alt=""></a>
+            <ul class="nav-menu">
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">New</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Popular</a></li>
@@ -24,7 +24,7 @@
     <div class="contenedor">
         <div class="cont-body">
             <div class="body-right">
-                <img src="/images/image-web-3-desktop.jpg" alt="">
+                <img src="/PaginaDeInicioSitioWeb/images/image-web-3-desktop.jpg" alt="">
                 <div class="title">
                     <h2>The Bright Future of Web 3.0?</h2>
                 </div>
@@ -53,7 +53,7 @@
         </div>
         <div class="cont-foot">
             <div>
-                <img src="/images/image-retro-pcs.jpg" alt="">
+                <img src="/PaginaDeInicioSitioWeb/images/image-retro-pcs.jpg" alt="">
                 <div>
                     <h2>01</h2>
                     <h4>Reviving Retro PCs</h4>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/image-top-laptops.jpg" alt="">
+                <img src="/PaginaDeInicioSitioWeb/images/image-top-laptops.jpg" alt="">
                 <div>
                     <h2>02</h2>
                     <h4>Top 10 Laptops of 2022</h4>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/image-retro-pcs.jpg" alt="">
+                <img src="/PaginaDeInicioSitioWeb/images/image-gaming-growth.jpg" alt="">
                 <div>
                     <h2>03</h2>
                     <h4> The Growth of Gaming</h4>
