--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
     </header>
     <div class="contenedor">
         <div class="cont-body">
-            <div class="body-right">
-                <img src="/PaginaDeInicioSitioWeb/images/image-web-3-desktop.jpg" alt="">
-                <div class="title">
-                    <h2>The Bright Future of Web 3.0?</h2>
-                </div>
-                <div class="note"> 
-                    <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-                        But is it really fulfilling its promise?
-                    </p>
-                    <button>Read more</button>
+            <div class="body-left">
+                <img class="body-left-img"src="/PaginaDeInicioSitioWeb/images/image-web-3-desktop.jpg" alt="">
+                <div class="left-art">
+                    <div class="title">
+                        <h2>The Bright Future of Web 3.0?</h2>
+                    </div>
+                    <div class="note">
+                        <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
+                            But is it really fulfilling its promise?
+                        </p>
+                        <button class="left-botton">Read more</button>
+                    </div>
                 </div>
             </div>
-            <div class="body-left">
-                <h2>New</h2>
-                <div>
+            <div class="body-right">
+                <h2 class="title-right">New</h2>    
+                <div class="note-right">
                     <h4>Hydrogen VS Electric Cars</h4>
                     <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
                 </div>
