--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@
                     <h4>Hydrogen VS Electric Cars</h4>
                     <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
                 </div>
-                <div>
+                <div class="note-right">
                     <h4>The Downsides of AI Artistry</h4>
                     <p>What are the possible adverse effects of on-demand AI image generation?</p>
                 </div>
-                <div>
+                <div class="note-right">
                     <h4>Is VC Funding Drying Up?</h4>
                     <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
                 </div>
             </div>
         </div>
         <div class="cont-foot">
-            <div>
-                <img src="/PaginaDeInicioSitioWeb/images/image-retro-pcs.jpg" alt="">
+            <div class="item-foot">
+                <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-retro-pcs.jpg" alt="">
                 <div>
                     <h2>01</h2>
                     <h4>Reviving Retro PCs</h4>
                     <p>What happens when old PCs are given modern upgrades?</p>
                 </div>
             </div>
-            <div>
-                <img src="/PaginaDeInicioSitioWeb/images/image-top-laptops.jpg" alt="">
+            <div class="item-foot">
+                <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-top-laptops.jpg" alt="">
                 <div>
                     <h2>02</h2>
                     <h4>Top 10 Laptops of 2022</h4>
                     <p>Our best picks for various needs and budgets.</p>
                 </div>
             </div>
-            <div>
-                <img src="/PaginaDeInicioSitioWeb/images/image-gaming-growth.jpg" alt="">
+            <div class="item-foot">
+                <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-gaming-growth.jpg" alt="">
                 <div>
                     <h2>03</h2>
                     <h4> The Growth of Gaming</h4>
