Footer del sitio web correccion del lado derecho del sitio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="/PaginaDeInicioSitioWeb/images/favicon-32x32.png">
     <title>web site</title>
 
     <link rel="stylesheet" href="styles.css">
@@ -56,26 +57,26 @@
         <div class="cont-foot">
             <div class="item-foot">
                 <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-retro-pcs.jpg" alt="">
-                <div>
-                    <h2>01</h2>
-                    <h4>Reviving Retro PCs</h4>
-                    <p>What happens when old PCs are given modern upgrades?</p>
+                <div class="note-foot">
+                    <h2 class="foot-h2">01</h2>
+                    <h4 class="foot-h4">Reviving Retro PCs</h4>
+                    <p class="foot-p">What happens when old PCs are given modern upgrades?</p>
                 </div>
             </div>
             <div class="item-foot">
                 <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-top-laptops.jpg" alt="">
-                <div>
-                    <h2>02</h2>
-                    <h4>Top 10 Laptops of 2022</h4>
-                    <p>Our best picks for various needs and budgets.</p>
+                <div class="note-foot">
+                    <h2 class="foot-h2">02</h2>
+                    <h4 class="foot-h4">Top 10 Laptops of 2022</h4>
+                    <p class="foot-p">Our best picks for various needs and budgets.</p>
                 </div>
             </div>
             <div class="item-foot">
                 <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-gaming-growth.jpg" alt="">
-                <div>
-                    <h2>03</h2>
-                    <h4> The Growth of Gaming</h4>
-                    <p>How the pandemic has sparked fresh opportunities.</p>
+                <div class="note-foot">
+                    <h2 class="foot-h2">03</h2>
+                    <h4 class="foot-h4" > The Growth of Gaming</h4>
+                    <p class="foot-p">How the pandemic has sparked fresh opportunities.</p>
                 </div>
             </div>
         </div>
