Sitio web  responsivo completo Menu para movil funcional

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <div class="contenedor">
         <div class="cont-body">
             <div class="body-left">
-                <img class="body-left-img"src="/PaginaDeInicioSitioWeb/images/image-web-3-desktop.jpg" alt="">
+                <picture>
+                    <source class="body-left-img" media="(max-width:600px )" srcset="/PaginaDeInicioSitioWeb/images/image-web-3-mobile.jpg">
+                    <img class="body-left-img"src="/PaginaDeInicioSitioWeb/images/image-web-3-desktop.jpg" alt="">
+                </picture>
                 <div class="left-art">
                     <div class="title">
                         <h2>The Bright Future of Web 3.0?</h2>
