--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" ><img class="logo" src="/PaginaDeInicioSitioWeb/images/logo.svg" alt=""></a>
+            <a href="#" ><img class="logo" src="images/logo.svg" alt=""></a>
             <button class="nav-toogle"><i class="fa-solid fa-bars"></i></button>
             <ul class="nav-menu">
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
@@ -32,8 +32,8 @@
         <div class="cont-body">
             <div class="body-left">
                 <picture>
-                    <source class="body-left-img" media="(max-width:600px )" srcset="/PaginaDeInicioSitioWeb/images/image-web-3-mobile.jpg">
-                    <img class="body-left-img"src="/PaginaDeInicioSitioWeb/images/image-web-3-desktop.jpg" alt="">
+                    <source class="body-left-img" media="(max-width:600px )" srcset="images/image-web-3-mobile.jpg">
+                    <img class="body-left-img"src="images/image-web-3-desktop.jpg" alt="">
                 </picture>
                 <div class="left-art">
                     <div class="title">
@@ -65,7 +65,7 @@
         </div>
         <div class="cont-foot">
             <div class="item-foot">
-                <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-retro-pcs.jpg" alt="">
+                <img class="img-foot" src="images/image-retro-pcs.jpg" alt="">
                 <div class="note-foot">
                     <h2 class="foot-h2">01</h2>
                     <a href="#" class="foot-h4">Reviving Retro PCs</a>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="item-foot">
-                <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-top-laptops.jpg" alt="">
+                <img class="img-foot" src="images/image-top-laptops.jpg" alt="">
                 <div class="note-foot">
                     <h2 class="foot-h2">02</h2>
                     <a href="#" class="foot-h4">Top 10 Laptops of 2022</a>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="item-foot">
-                <img class="img-foot" src="/PaginaDeInicioSitioWeb/images/image-gaming-growth.jpg" alt="">
+                <img class="img-foot" src="images/image-gaming-growth.jpg" alt="">
                 <div class="note-foot">
                     <h2 class="foot-h2">03</h2>
                     <a href="#" class="foot-h4" > The Growth of Gaming</a>
